--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-swipe": "^0.0.23",
+    "react-responsive-carousel": "^3.2.23",
     "shadcn-ui": "^0.4.1"
   },
   "devDependencies": {
