--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-swipe": "^0.0.23",
     "react-responsive-carousel": "^3.2.23",
-    "shadcn-ui": "^0.4.1"
+    "shadcn-ui": "^0.4.1",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
